smaller font to prevent wordwrap
mostly for phone

--- a/main.css
+++ b/main.css
@@ -156,7 +156,7 @@ button {
 */
 /* Dropdown content (hidden by default) */
 .dropdown-content {
-    font-size:.75em;
+    font-size:.441em;
     cursor: pointer;
     text-transform: uppercase;
     font-color: white;
@@ -165,7 +165,7 @@ button {
     width:100%;
     left:0%;
     column-count:8;
-    column-gap: 5px;
+    column-gap: 10px;
     column-rule: 2.5px solid white;
  display: none;
  position: fixed;
